welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: ')' expected but '<-' found.
if ( ado<-a>=13 && a<=19) {
        ^countTeen:20: error: illegal start of simple expression
} 
^